--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
-<h1>
-    Hola
-</h1>
+<!-- by Tomoki -->
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="title" content="Juego Snake">
+    <meta name="description" content="Todavía te acuerdas del clásico juego de Snake para móviles? El juego de la serpiente que nos encandiló a todos con el antiguo NOKIA 3310 regresa aqui pero esta vez hasta tu navegador! La mecánica de juego sigue o intenta ser la misma. Maneja a esta serpiente hambrienta y muévela a través de la pantalla esquivando todos los obstáculos mientras recolecta fruta que le ayudará a crecer cada vez más. ¡Aumenta tu longitud todo lo posible y consigue superar tu propio récord! Creado por Tomoki-Sakurai">
+    <meta name="keywords" content="snake">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="pinterest-rich-pin" content="false" />
+    <link rel="stylesheet" href="css/style.css">
+    <title>Snake</title>
+</head>
+<body>
+    <canvas id="scanvas"></canvas>
+    <!-- <table>
+        <tr>
+            <td></td>
+            <td><button id=38 onclick="snake.changeDirection(this.id)">↑</button></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td><button id=37 onclick="snake.changeDirection(this.id)">←</button></td>
+            <td><button id=40 onclick="snake.changeDirection(this.id)">↓</button></td>
+            <td><button id=39 onclick="snake.changeDirection(this.id)">→</button></td>
+        </tr>
+    </table> -->
+    <!-- <button onclick="snake.createTail()">Hacer crecer (en desarrollo)</button>
+    <script src="js/functions.js"></script>
+    <script src="js/snake.js"></script> -->
+    <script src="js/script.js"></script>
+</body>
+</html>
