--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Snake</title>
 </head>
 <body>
-    <canvas id="scanvas"></canvas>
+    <canvas id="scanvas" style="background-color: #0a0a0a;"></canvas>
     <!-- <table>
         <tr>
             <td></td>
