--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="snake">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="pinterest-rich-pin" content="false" />
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>Snake</title>
 </head>
 <body>
@@ -28,6 +28,6 @@
     <!-- <button onclick="snake.createTail()">Hacer crecer (en desarrollo)</button>
     <script src="js/functions.js"></script>
     <script src="js/snake.js"></script> -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
