--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="keywords" content="snake">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="pinterest-rich-pin" content="false" />
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
     <title>Snake</title>
 </head>
 <body>
-    <canvas id="scanvas" style="background-color: #0a0a0a; width: 100%; height: 90%;"></canvas>
+    <canvas id="scanvas"></canvas>
     <!-- <table>
         <tr>
             <td></td>
