--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Snake</title>
 </head>
 <body>
+    <h1 id="aviso"></h1>
     <canvas id="scanvas"></canvas>
     <!-- <table>
         <tr>
