--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h1 id="aviso"></h1>
+    <p>puntos: <span id="point"></span></p>
     <canvas id="scanvas"></canvas>
     <!-- <table>
         <tr>
